--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
 Flask==3.0.0
-tensorflow==2.13.0
-numpy==1.24.3
-scikit-learn==1.3.0
-gunicorn==21.2.0
-h5py==3.9.0
-pandas==1.5.3
-matplotlib==3.7.2
-seaborn==0.12.2
+tensorflow==2.20.0
+numpy==1.26.4
+nltk==3.8.1
+gunicorn
